test/runnable/imports/testptrref_usetmpl.d
module imports.testptrref_usetmpl;
import imports.testptrref_tmpl;

void* intPtrInstance()
{
    return &TStruct!(int*).gsharedInstance;
}

