test/fail_compilation/test2830a.d
module test2830a;

import imports.test2830a;

void foo()
{
    TestStruct s;
}
